--- a/Task-05/src/styles/navbar.css
+++ b/Task-05/src/styles/navbar.css
@@ -24,7 +24,7 @@
 }
 
 .navbar-topics a {
-    font-family: jetbrains-mono, monospace;
+    font-family: monospace;
     text-decoration: none;
     color: black;
     font-size: 25px;
