--- a/Task-05/src/styles/profile.css
+++ b/Task-05/src/styles/profile.css
@@ -7,6 +7,17 @@
 
 .profile-info img {
     width: 400px;
+
+}
+
+.profile-info h2 {
+    color: #57839d;
+    font-size: 40px;
+}
+
+.profile-info h3 {
+    color: #57839d;
+    font-size: 30px;
 }
 
 .profile-flwn {
@@ -19,14 +30,15 @@
 }
 
 .profile-flwn h2 {
+    color: #57839d;
     font-size: 36px;
     margin-bottom: 10px;
     text-decoration: underline;
 }
 
-.profile-flwn ul {
-    list-style-type: none;
-    padding: 0;
-    font-family: monospace;
-    font-size: 20px;
+.divider {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-top: 10px;
 }
